# testing_rust_stm32f03

./: Cargo.toml  Embed.toml  garbage.rs  memory.x
.cargo/: config.toml
src/: clock.rs  main.rs  timer.rs
