[package]
name = "blink"
version = "0.1.0"
authors = ["Dominik Völkel <voelkel.dominik@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt ={ version = "0.7", features = ["device"] }
nb = "1.0.0"
panic-probe = { version = "0.3.1", features = ["defmt"] }


defmt-rtt = "0.4"
defmt = "0.3.5"

[dependencies.stm32f0xx-hal]
version = "0.18.0"
features = ["stm32f030x6", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
