[package]
name = "embassy-stm32f0-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "memory-x", "stm32f091rc", "time-driver-tim3", "exti", "unstable-pac"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }

[patch.crates-io]
# Unfortunately embassy-stm32 hasn't had proper releases for a while,
# therefore update to a somewhat newer version to handle API changes
# between 0.1.0 -> 0.2.0
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "06869e2e85695f4528d1148dfd81700c905771c5" }
embassy-sync= { git = "https://github.com/embassy-rs/embassy.git", rev = "06869e2e85695f4528d1148dfd81700c905771c5" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "06869e2e85695f4528d1148dfd81700c905771c5" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "06869e2e85695f4528d1148dfd81700c905771c5" }

[profile.release]
debug = 2

[profile.dev]
opt-level = "s"
